# runcher_tauri

./: README.md  TODO.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: launchOptions.ts  loadingManager.ts  main.ts  modDetails.ts  modTree.ts  packList.ts  settings.ts  settingsModal.ts  sidebar.ts  statusBar.ts  styles.css  styles.scss  uploadModModal.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: frontend_types.rs  lib.rs  main.rs
src-tauri/src/launch_options/: mod.rs
src-tauri/src/mod_manager/: mod.rs
src-tauri/src/mod_manager/game_config/: mod.rs
src-tauri/src/mod_manager/integrations/: mod.rs  steam.rs
src-tauri/src/mod_manager/load_order/: mod.rs
src-tauri/src/mod_manager/mods/: mod.rs
src-tauri/src/mod_manager/profiles/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/updater/: mod.rs
src/utils/: steamFormat.ts
