[package]
name = "runcher-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.1.1", features = [] }

[dependencies]

# Tauri support.
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-process = "2"

# Serialization support.
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Error managing.
anyhow = "^1.0"
thiserror = "^1.0"

# Compression support
zstd = "^0.13"
base64 = "^0.22"
sha256 = "^1.6"

# Improved multi-thread Support.
crossbeam = "^0.8"

# Basic get/set support.
getset = "^0.1"

# Multithread iterator support.
rayon = "^1"

# IPC Support
interprocess = "^2"

# Support for Regex operations.
regex = "^1"

# Support for unpacking Shogun 2 maps.
flate2 = "^1"

# Support for open files in a native way.
open = "^5"

# Steam Workshop support.
#steam-workshop-api = "^0.2"
steam-workshop-api = { git = "https://github.com/Frodo45127/rs-steam-workshop-api.git" }

# For random ipc channel name generator.
rand = "^0"

# URL parsing support.
url = "^2"

# Internal dependencies.
common_utils = { git = "https://github.com/Frodo45127/rust_common_utils.git", branch = "master" }
rpfm_lib = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop", features = ["integration_log", "integration_git"] }
rpfm_extensions = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop" }
futures-util = "0.3.31"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
